Bug 1742804 - Backed out changeset fa867b130b44. r=padenot

Audio drivers created at a very high rate have been observed on Nightly and
correlate time-wise to this commit (Bug 1740827) landing. We back it out
tentatively to see whether it has an effect on said reports.

Differential Revision: https://phabricator.services.mozilla.com/D132028